# masm2c

./: .coveragerc  .gitattributes  .gitignore  .pycrunch-config.yaml  .travis.yml  .workflow  AGENTS.md  AUTHORS.md  CHANGELOG.md  IPLAY.CFG  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.adoc  README.md  _binarytests.sh  _coverage.bat  _deduplicate_tests.py  _ida_to_tasm.sh  _idai.sh  _masm.bnf  _masm61.lark  _masm61.pg  _masm61.py  _pglr_test.py  _pglr_test_.py  amasm61.g4  asm.c  asm.cpp  asm.h  asm_16.h  asm_32.h  asm_regs_dbx.h  asm_regs_decomp.h  asm_regs_m2c.h  build  build.bat  build_bc.bat  build_bc.sh  (+63 more)
.circleci/: config.yml
.run/: pytest in tests.run.xml
asmTests/: LICENSE  _config.sh  _singletest.sh  _test.sh  _tests.sh  addr.as  addr.asm  addr.h  addsub.asm  addsub.cpp  addsub.h  ar.asm  ar.h  argv_tail.asm  array.asm  array.cpp  array.h  array_.asm  bios_time.asm  build.sh  build_mingw.sh  cmp.asm  cmp.cpp  cmp.h  cmpsb.asm  cmpsb.cpp  cmpsb.h  conditional.asm  data.asm  data.cpp  data.h  dataOff.asm  datadup.asm  datadup.cpp  datadup.h  dataoff.cpp  dataoff.h  dos_find.asm  dos_time_mem.asm  ebnf.asm  (+95 more)
asm_emu/: 1.h  2.h  _gen_emu_wrapper._sh_  _gen_emu_wrapper.sh  x86.h  x86_shrd.h
docs/: conf.py  index.rst
examples/: build_masm.bat  build_t2.bat  build_tasm.bat  intro.asm  intro.cpp  intro.h  iplay.asm  iplay.idc  iplay_m_.cpp  iplay_m_.h  iplay_masm.asm  snake.asm  snake.cpp  snake.h
instr_test/: Makefile  _config.sh  build.sh  generate_tests.py  test_insn_tests.cpp
masm2c/: Macro.py  Struct.py  Token.py  __init__.py  _masm61.lark  cli.py  (+11 more)
(+140 files in other folders)
